# Stratos-Hub

./: .gitignore  Anchor.toml  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  env.example  package.json  turbo.json
apps/api/: package.json
apps/api/src/routes/: agents.ts
apps/web/: next.config.js  package.json
apps/web/src/app/: layout.tsx
apps/web/src/components/: AgentCard.tsx
infrastructure/monitoring/: prometheus.yml
programs/marketplace/: Cargo.toml
programs/marketplace/src/: lib.rs
programs/marketplace/src/instructions/: create_agent.rs
programs/marketplace/src/state/: mod.rs
services/agent-runtime/: Dockerfile  requirements.txt
services/agent-runtime/src/: main.py
services/agent-runtime/src/core/: database.py
services/agent-runtime/src/execution/: distributed_engine.py
services/agent-runtime/src/llm/: LLMIntegration.py
services/agent-runtime/src/monitoring/: performance_monitor.py
services/agent-runtime/tests/: test_execution_engine.py
