[package]
name = "stratoshub-marketplace"
version = "0.1.0"
description = "StratosHub Marketplace Smart Contract - Agent registration and execution payment processing"
edition = "2021"
license = "MIT"
repository = "https://github.com/stratoshub/stratoshub"
authors = ["StratosHub Team"]
keywords = ["solana", "anchor", "smart-contract", "ai", "marketplace"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

[lib]
crate-type = ["cdylib", "lib"]
name = "stratoshub_marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
security = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
solana-program = "~1.16.0"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.13.1", features = ["no-entrypoint"] }
borsh = "0.10.3"
arrayref = "0.3.7"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "~1.16.0"
solana-sdk = "~1.16.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
assert_matches = "1.5"
proptest = "1.0" 